# photega

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: app.py  main.py
app/api/: files.py
app/api/files/: routes.py
app/api/users/: user_manager.py
app/core/: config.py  db.py
app/deployment/: serverless.yml
app/templates/: base.html  index.html
backend/: .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 184ca5c227fd_final_file_db_setup.py  2a1bca763766_init_with_sqlmodel_sa.py  5f5b41fc3401_inherit_sqlmodel_test.py  c267770bbe4c_inherit_sqlmodel.py  de80ecae3d92_moved_updated_at_and_created_at.py  eb4c750bdc62_init.py
backend/app/: app.py
backend/app/api/files/: models.py  routes.py
backend/app/api/users/: models.py  routes.py  user_manager.py
backend/app/core/: config.py  db.py  redis.py
backend/app/templates/: base.html  index.html
backend/infra/serverless/: serverless.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  files.tsx  index.css  main.tsx
frontend/src/app/: store.tsx
frontend/src/components/: File.tsx  Footer.tsx  Header.tsx
frontend/src/components/Common/: Footer.tsx  Header.tsx
frontend/src/components/Files/: DownloadButton.tsx  FileItem.tsx  FileList.tsx
frontend/src/pages/: Home.tsx
frontend/src/routes/: CreateAccount.tsx  ForgotPassword.tsx  Home.tsx  ResetPassword.tsx  SignIn.tsx
frontend/src/types/: auth.tsx  file.tsx
frontend/src/utils/: formatDate.tsx
infra/: serverless.yml
(+2 files in other folders)
